refactor: Replace clientId with customer and attendant in Order, OrderEntity and related classes